// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeaheadInputMulti> Default story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Juneau",
          "name": "Alaska",
          "population": 710249,
          "region": "West",
        }
      }
      tabIndex={0}
    >
      Alaska
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Phoenix",
          "name": "Arizona",
          "population": 6392307,
          "region": "West",
        }
      }
      tabIndex={0}
    >
      Arizona
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Little Rock",
          "name": "Arkansas",
          "population": 2915958,
          "region": "South",
        }
      }
      tabIndex={0}
    >
      Arkansas
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Disabled story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-disabled"
    >
      Alaska
    </div>
    <div
      className="rbt-token rbt-token-disabled"
    >
      Arizona
    </div>
    <div
      className="rbt-token rbt-token-disabled"
    >
      Arkansas
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        disabled={true}
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> WithHint story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Juneau",
          "name": "Alaska",
          "population": 710249,
          "region": "West",
        }
      }
      tabIndex={0}
    >
      Alaska
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Phoenix",
          "name": "Arizona",
          "population": 6392307,
          "region": "West",
        }
      }
      tabIndex={0}
    >
      Arizona
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      option={
        Object {
          "capital": "Little Rock",
          "name": "Arkansas",
          "population": 2915958,
          "region": "South",
        }
      }
      tabIndex={0}
    >
      Arkansas
      <button
        aria-label="Remove"
        className="close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
        value="cali"
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value="california"
      />
    </div>
  </div>
</div>
`;
